add local time fot dayInfo
