# docs/swagger.json
@@ -599,7 +599,7 @@
         }
       }
     },
-    "/water/dayInfo": {
+    "/water/dayInfo/{todayStr}": {
       "get": {
         "tags": [
           "Water"
@@ -610,6 +610,17 @@
         "security": [
           {
             "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "todayStr",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "2024-10-28T07:54:33.439Z"
+            }
           }
         ],
         "responses": {
@@ -1180,7 +1191,7 @@
             "description": "User's ID",
             "example": "609e126aa08b5b3c88b728db"
           },
-          "data": {
+          "date": {
             "type": "string",
             "description": "data`s water",
             "example": "2024-10-23 13:10"
